update post qa_transaction
